Fix sidenaved overlaping on content + dog breeds

--- a/frontend/src/app/features/mat-toolbar/mat-toolbar.component.scss
+++ b/frontend/src/app/features/mat-toolbar/mat-toolbar.component.scss
@@ -1,7 +1,4 @@
-mat-toolbar {
-  height: 5vh;
-}
-
 .connectButton {
-  margin-left: 85vw;
+  float: right;
+  margin-right: 1vw;
 }
